# refl-cpp

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Introduction.md  LICENSE  README.md  contributors.md  example.cpp  refl.hpp
.circleci/: config.yml
.github/: FUNDING.yml
bench/: CMakeLists.txt  bench-large-pod-search.cpp  bench-large-pod.cpp
cmake/: in-source-guard.cmake  install-rules.cmake  variables.cmake
docs/: _c_h_a_n_g_e_l_o_g_8md.html  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.html  _i_n_t_r_o_d_u_c_t_i_o_n_8md.html  _introduction_8md.html  _r_e_a_d_m_e_8md.html  _starter_guide_8md.html  _t_o_d_o_8txt.html  annotated.html  annotated_dup.js  classes.html  classrefl_1_1descriptor_1_1field__descriptor-members.html  classrefl_1_1descriptor_1_1field__descriptor.html  classrefl_1_1descriptor_1_1field__descriptor.js  classrefl_1_1descriptor_1_1function__descriptor-members.html  classrefl_1_1descriptor_1_1function__descriptor.html  classrefl_1_1descriptor_1_1function__descriptor.js  classrefl_1_1descriptor_1_1member__descriptor__base-members.html  classrefl_1_1descriptor_1_1member__descriptor__base.html  classrefl_1_1descriptor_1_1member__descriptor__base.js  classrefl_1_1descriptor_1_1type__descriptor-members.html  classrefl_1_1descriptor_1_1type__descriptor.html  classrefl_1_1descriptor_1_1type__descriptor.js  classrefl__impl_1_1refl_1_1descriptor_1_1field__descriptor-members.html  classrefl__impl_1_1refl_1_1descriptor_1_1field__descriptor.html  classrefl__impl_1_1refl_1_1descriptor_1_1function__descriptor-members.html  classrefl__impl_1_1refl_1_1descriptor_1_1function__descriptor.html  classrefl__impl_1_1refl_1_1descriptor_1_1member__descriptor__base-members.html  classrefl__impl_1_1refl_1_1descriptor_1_1member__descriptor__base.html  classrefl__impl_1_1refl_1_1descriptor_1_1type__descriptor-members.html  classrefl__impl_1_1refl_1_1descriptor_1_1type__descriptor.html  classstd_1_1complex.html  classstd_1_1shared__ptr.html  classstd_1_1unique__ptr.html  classstd_1_1weak__ptr.html  contributors_8md.html  deprecated.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  example-advanced_8cpp.html  example-advanced_8cpp.js  (+340 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  (+52 more)
doxygen/: Doxyfile
examples/: CMakeLists.txt  README.md  example-binding.cpp  example-builders.cpp  example-custom-rtti.cpp  example-dao.cpp  example-dbo.cpp  example-inheritance.cpp  example-macro.cpp  example-partials.cpp  example-proxy.cpp  example-serialization.cpp  example-struct-of-arrays.cpp
include/: refl.hpp
test/: 010-TestCase.cpp  020-ConstString.hpp  030-TypeList.hpp  040-TypeTraits.hpp  050-Attributes.hpp  060-Utils.hpp  070-Descriptors.hpp  080-Runtime.hpp  090-StdTypes.hpp  CMakeLists.txt  refl.tests.cpp
